# tele-kommunikationssystem-23-24

./: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.default  sdkconfig.defaults  sdkconfig.esp-wrover-kit  sdkconfig.esp-wrover-kit.old  sdkconfig.old
lib/hfp_ag_client/src/: app_hf_msg_set.c  bt_app_hf.c  hfp_ag_client.c  hfp_ag_client.h
src/: CMakeLists.txt  I2SSampler.cpp  app_hf_msg_set.c  bt_app_hf.c  bt_app_hf.h  hfp_ag_client.c  hfp_ag_client.h  i2s_adc_sampler.cpp  i2s_adc_sampler.hpp  main.cpp  utilities.h
src/hfp_ag_client/: hfp_ag_client.c  hfp_ag_client.h
