idf_component_register(SRCS "hfp_ag_client/app_hf_msg_prs.c" 
                            "hfp_ag_client/app_hf_msg_set.c" 
                            "hfp_ag_client/bt_app_core.c" 
                            "hfp_ag_client/gpio_pcm_config.c" 
                            "hfp_ag_client/hfp_ag_client.c" 
                            "i2s_sampler/ADCSampler.cpp"
                            "i2s_sampler/I2SSampler.cpp"
                            "i2s_adc_sampler.cpp" 
                            "main.cpp")