idf_component_register(SRCS "ADCSampler.cpp"
                            "app_hf_msg_prs.c"
                            "app_hf_msg_set.c"
                            "bt_app_core.c"
                            "bt_app_hf.c"
                            "gpio_pcm_config.c"
                            "i2s_adc_sampler.cpp"
                            "I2SSampler.cpp"
                            "main.cpp"
)